# stock-analysis

./: .gitignore  DATA_SOURCE_STRATEGY.md  MVP_ROADMAP.md  PHASE1_FINAL_REPORT.md  PHASE1_TASKS.md  PHASE2_7_1_LIST_QUALITY_CLEANUP_SUMMARY.md  PHASE2_7_2_REAL_VALIDATION_RUN_GUIDE.md  PHASE2_7_2_WALK_FORWARD_VALIDATION_PLAN.md  PHASE2_7_2_WALK_FORWARD_VALIDATION_SUMMARY.md  PHASE2_7_3_SIMULATED_PORTFOLIO_REVIEW_PLAN.md  PHASE2_7_3_SIMULATED_PORTFOLIO_REVIEW_SUMMARY.md  PHASE2_7_API_SUMMARY.md  PHASE2_7_BACKEND_LABEL_LIST_SUMMARY.md  PHASE2_7_DASHBOARD_SUMMARY.md  PHASE2_7_MULTI_LABEL_AND_STOCK_DETAIL_PLAN.md  PHASE2_7_SUMMARY.md  PHASE2_8_1_CONTROLLED_2024_FORWARD_EXPANSION_PLAN.md  PHASE2_8_1_CONTROLLED_2024_FORWARD_EXPANSION_RUN_GUIDE.md  PHASE2_8_2_STRATEGY_FAMILY_EXPERIMENTS_PLAN.md  PHASE2_8_3_AGGRESSIVE_FILTER_OPTIMIZATION_PLAN.md  PHASE2_8_4_MULTI_ASOF_CONTROLLED_VALIDATION_PLAN.md  PHASE2_8_5_MULTI_WINDOW_EXPERIMENT_SUMMARY.md  PHASE2_8_6_VALIDATION_READINESS_CHECKER.md  PHASE2_FULL_MARKET_PREWARM_EXECUTION.md  PHASE2_FULL_MARKET_PREWARM_PLAN.md  PHASE2_FULL_MARKET_VALIDATION.md  PHASE2_FULL_MARKET_WORKFLOW_VALIDATION.md  PHASE2_SCALE_VALIDATION.md  PHASE2_SUMMARY.md  PHASE2_WORKFLOW_VALIDATION.md  PRD.md  PRODUCTION_WORKFLOW.md  PROJECT_RULES.md  README.md  SMOKE_TESTS.md  SMOKE_TESTS_PHASE1_DATA.md  TECHNICAL_ARCHITECTURE.md  plan.md
backend/: pyproject.toml
backend/scripts/: audit_production_candidate_foundation.py  build_feature_only_member_snapshot.py  build_historical_h1h5_asof_artifacts.py  build_historical_h1h5_label_source.py  check_cache_coverage.py  (+43 more)
(+231 files in other folders)
